[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-suite"
version = "0.0.0"
description = "Seamless umbrella distribution (all components by default)"
requires-python = ">=3.12"
authors = [{name = "Sjoerd de Vries"}]
dependencies = [
    "seamless-base",
    "seamless-config",
    "seamless-remote",
    "seamless-transformer",
    "seamless-dask",
    "seamless-jobserver",
    "seamless-database",
    "remote-http-launcher",
]
