[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-suite"
version = "1.2.0"
description = "Seamless umbrella distribution (all components by default)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{name = "Sjoerd de Vries"}]
dependencies = [
    "seamless-core",
    "seamless-config>=0.2.0",
    "seamless-remote>=0.2.0",
    "seamless-transformer>=0.3.0",
    "seamless-dask",
    "seamless-jobserver>=0.1.2",
    "seamless-database>=2.0.2",
    "hashserver>=1.0.3",
    "remote-http-launcher>=0.2.0",
]
keywords = ["seamless", "suite", "workflow", "reproducibility", "caching", "pipeline", "HPC", "deterministic", "content-addressed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/sjdv1982/seamless"
Repository = "https://github.com/sjdv1982/seamless"
Issues = "https://github.com/sjdv1982/seamless/issues"

[tool.setuptools]
packages = []
