[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-suite"
version = "1.3.3"
description = "Seamless umbrella distribution (all components by default)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{name = "Sjoerd de Vries"}]
dependencies = [
    "seamless-core>=0.1.3",
    "seamless-config>=0.3.2",
    "seamless-remote>=0.3.0",
    "seamless-transformer[compiled]>=0.4.2",
    "seamless-dask>=0.2.1",
    "seamless-jobserver>=0.2.0",
    "seamless-database>=2.1.0",
    "hashserver>=1.1.0",
    "remote-http-launcher>=0.4.3",
    "seamless-signature",
]
keywords = ["seamless", "suite", "workflow", "reproducibility", "caching", "pipeline", "HPC", "deterministic", "content-addressed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/sjdv1982/seamless"
Repository = "https://github.com/sjdv1982/seamless"
Issues = "https://github.com/sjdv1982/seamless/issues"

[tool.setuptools]
packages = []
