[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-config"
version = "0.1.5"
description = "Configuration layer and cluster/remote selection tooling for Seamless"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Sjoerd de Vries"}]
dependencies = [
    "PyYAML",
    "seamless-core",
    "seamless-remote",
]
keywords = ["seamless", "configuration", "cluster", "remote-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/sjdv1982/seamless"
Repository = "https://github.com/sjdv1982/seamless-config"
Issues = "https://github.com/sjdv1982/seamless/issues"

[tool.setuptools.package-data]
seamless_config = ["tools.yaml"]

[tool.setuptools]
script-files = ["bin/seamless-init"]

[tool.setuptools.packages.find]
where = ["."]
include = ["seamless_config*"]
exclude = ["tests*"]
