[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-core"
version = "0.1.1"
description = "Core runtime primitives for Seamless: content-addressed data model, cell type system, and buffer caching"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{name = "Sjoerd de Vries"}]
dependencies = [
    "numpy",
    "orjson",
    "PyYAML",
]
keywords = ["seamless", "reproducibility", "checksum", "workflow", "scientific-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/sjdv1982/seamless"
Repository = "https://github.com/sjdv1982/seamless-core"
Issues = "https://github.com/sjdv1982/seamless/issues"

[project.optional-dependencies]
dev = []

[tool.setuptools]
script-files = [
    "bin/seamless-checksum",
    "bin/seamless-checksum-file",
    "bin/seamless-checksum-index",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seamless*"]
exclude = ["tests*"]
