[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-database"
version = "2.0.1"
description = "SQLite-backed metadata database service for Seamless"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Sjoerd de Vries"}]
dependencies = [
    "aiohttp",
    "peewee",
]
keywords = ["seamless", "database", "sqlite", "service"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/sjdv1982/seamless"
Repository = "https://github.com/sjdv1982/seamless-database"
Issues = "https://github.com/sjdv1982/seamless/issues"

[project.scripts]
seamless-database = "database:main"

[tool.setuptools]
py-modules = ["database", "database_models"]
