[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-jobserver"
version = "0.0.0"
description = "Dummy Seamless jobserver implementation"
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
]

[project.scripts]
seamless-jobserver = "jobserver:main"

[tool.setuptools]
py-modules = ["jobserver"]
