[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-remote"
version = "0.2.0"
description = "Remote clients and launch abstractions for Seamless services"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Sjoerd de Vries"}]
dependencies = [
    "aiofiles",
    "aiohttp",
    "frozendict",
    "seamless-core",
    "seamless-config",
]
keywords = ["seamless", "remote", "client", "hashserver", "jobserver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/sjdv1982/seamless"
Repository = "https://github.com/sjdv1982/seamless-remote"
Issues = "https://github.com/sjdv1982/seamless/issues"

[tool.setuptools]
script-files = ["bin/seamless-resolve", "bin/seamless-fingertip"]

[tool.setuptools.packages.find]
where = ["."]
include = ["seamless_remote*"]
exclude = ["tests*"]
