[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-base"
version = "0.0.0"
description = "Seamless base classes"
authors = [{name = "Sjoerd de Vries"}]
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools]
script-files = [
    "bin/seamless-checksum",
    "bin/seamless-checksum-file",
    "bin/seamless-checksum-index",
]
