[metadata]
name = seamless-database
version = 0.0.0
description = Seamless SQLite database server
license = MIT
author = Sjoerd de Vries

[options]
python_requires = >=3.9
py_modules =
    database
    database_models
install_requires =
    aiohttp
    peewee

[options.entry_points]
console_scripts =
    seamless-database = database:main
