[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
seamless_config = ["tools.yaml"]

[project]
name = "seamless-transformer"
version = "0.0.0"
dependencies = ["bashlex", "PyYAML"]

[project.scripts]
seamless-run = "seamless_transformer.cmd.api.main:main"
seamless-upload = "seamless_transformer.cmd.api.upload:main"
seamless-download = "seamless_transformer.cmd.api.download:main"
seamless-run-transformation = "seamless_transformer.api.run_transformation:main"
seamless-queue = "seamless_transformer.api.queue:main"
seamless-queue-finish = "seamless_transformer.api.queue:finish"
